# palmiche-ai

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG-US.md  CHANGELOG.md  Dockerfile  GEMINI.md  INSTALL.md  LICENSE  MCP-AGENTS-US.md  MCP-AGENTS.md  README-US.md  README.md  TOOLS-US.md  TOOLS.md  docker-compose.yml  docker-entrypoint.sh  extract_assets.py  pyproject.toml  run_jarvis.py  run_jarvis.sh  run_web_dev.sh  run_web_prod.sh  tt2e.py
.github/workflows/: pr-review.yml
artefacts/: Dockerización de Palmiche J.A.R.V.I.S. Completada.md  Implementación de LM Studio como Backend Nativo.implementation_plan.md  Integración de LM Studio (Backend Nativo).walkthrough.md  Migración a Progressive Web App (PWA) para Jarvis.implementation_plan.md  Migración a Progressive Web App Completada.walkthrough.md  Migración a Tailwind CSS y Mejora de UI.implementation_plan.md  Migración a Tailwind CSS.walkthrough.md  Plan de Implementación_Waveform de Voz de Jarvis (Versión 2).implementation_plan.md  Plan de Migración_Backend con FastAPI y Frontend Web Independiente.md  Renderizado de Markdown a HTML.implementation_plan.md  Resumen_Integración de Voz en Web U.walkthrough.md  Waveform Líquido de Jarvis Implementado.walkthrough.md  implementation_plan_docker_env.md
docs/: ARCHITECTURE-US.md  ARCHITECTURE.md  CHANGELOG-US.md  CHANGELOG.md  DOCKER_NOTES.md  FRONTEND_SETUP.md  INSTALL-US.md  INSTALL.md  MCP-AGENTS-US.md  MCP-AGENTS.md  TOOLS-US.md  TOOLS.md  frontend_setup.md
jarvis/: .env.example  __init__.py  __main__.py  config.py  custom_tools.example.txt  guardrails.example.json  install.sh  requirements.txt
jarvis/a2a/: __init__.py  client.py  models.py  server.py
jarvis/api/: API_WEB.md  schemas.py  server.py
jarvis/brain/: adk_agent.py  adk_dynamic.py  adk_tools.py  adk_universal.py  agent.py  llm_completion.py  lmstudio_agent.py  ollama_agent.py  prompts.py
jarvis/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
jarvis/guardrails/: README.md  __init__.py  defaults.py  engine.py  models.py
jarvis/interface/: animation.py  audio_engine.py  cli.py  hud_animation.py  splash.py  tray.py  voice.py  wake_word.py  web.py
jarvis/mcp_support/: __init__.py  client.py  json_filter.py  server.py
jarvis/memory/: history.py
jarvis/scripts/: 49-jarvis-power.rules  install-power-rules.sh
jarvis/tools/: apps.py  autostart.py  calculator.py  camera.py  clipboard.py  computer_use.py  custom.py  dev.py  dynamic.py  events.py  files.py  media.py  network.py  notes.py  notifications.py  registry.py  screenshot.py  shell.py  system.py  text_tools.py  (+4 more)
tests/: test_api_key_resolution.py  test_audio_engine.py  test_brain_skills_lang.py  test_custom_tools.py  test_dynamic_tools_all_brains.py  test_guardrails.py
www/: package.json  pnpm-lock.yaml  tailwind.config.js
(+19 files in other folders)
