[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palmiche-jarvis"
version = "1.0.0"
description = "J.A.R.V.I.S — Just A Rather Very Intelligent System, personal AI laptop assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "assistant", "claude", "anthropic", "cli"]
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pyperclip>=1.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.13",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
]
tray = [
    "PyQt6>=6.4.0",
    "PyQt6-Qt6-Multimedia>=6.4.0",
    "Pillow>=10.0.0",
]
adk = [
    "google-adk>=1.0.0",
    "litellm>=1.0.0",
]
# 'gemini' is now an alias for 'adk' — litellm is needed for the universal agent
gemini = [
    "google-adk>=1.0.0",
    "litellm>=1.0.0",
]
assets = [
    "yt-dlp>=2024.1.0",
]
a2a = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
mcp = [
    "mcp>=1.0.0",
]
computer-use = [
    "google-genai>=1.0.0",
    "playwright>=1.40.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "mss>=9.0.1",
]
vision = [
    "opencv-python-headless>=4.8.0",
]
all = [
    "palmiche-jarvis[voice,tray,adk,assets,a2a,mcp,computer-use,vision]",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
